--- a/forms/configdialog.ui
+++ b/forms/configdialog.ui
@@ -275,7 +275,7 @@
                 <widget class="QWidget" name="page_SIMULATION">
                  <layout class="QHBoxLayout" name="horizontalLayout">
                   <item>
-                   <layout class="QGridLayout" name="gridLayout">
+                   <layout class="QGridLayout" name="gridLayout1">
                     <property name="spacing">
                      <number>1</number>
                     </property>
